Fix distributed HydrostaticFreeSurfaceModel test that seem to break with memory error (#4666)
* add some debug statements

* Update test_distributed_hydrostatic_model.jl

* impose a larger timeout

* Update pipeline.yml

* Update test_distributed_hydrostatic_model.jl

* Update pipeline.yml

---------

Co-authored-by: Simone Silvestri <silvestri.simone0@gmail.com>

--- a/.buildkite/distributed/pipeline.yml
+++ b/.buildkite/distributed/pipeline.yml
@@ -97,6 +97,7 @@ steps:
       TEST_ARCHITECTURE: "CPU"
     commands:
       - "srun julia -O0 --color=yes --project -e 'using Pkg; Pkg.test()'"
+    timeout_in_minutes: 1440
     agents:
       slurm_mem: 50G
       slurm_ntasks: 4
@@ -112,8 +113,9 @@ steps:
       TEST_ARCHITECTURE: "GPU"
     commands:
       - "srun julia -O0 --color=yes --project -e 'using Pkg; Pkg.test()'"
+    timeout_in_minutes: 1440
     agents:
-      slurm_mem: 80G # Apparently the GPU tests require more memory
+      slurm_mem: 100G # Apparently the GPU tests require more memory
       slurm_ntasks: 4
       slurm_gpus_per_task: 1
     retry:
