--- a/.buildkite/pipeline-benchmarks.yml
+++ b/.buildkite/pipeline-benchmarks.yml
@@ -37,7 +37,7 @@ steps:
 
     command: |
       # Instantiate
-      $TARTARUS_HOME/julia-$JULIA_VERSION/bin/julia --color=yes --project=benchmark --check-bounds=no -e 'using Pkg; Pkg.add("./"); Pkg.instantiate()'
+      $TARTARUS_HOME/julia-$JULIA_VERSION/bin/julia --color=yes --project=benchmark --check-bounds=no -e 'using Pkg; Pkg.add(path="./"); Pkg.instantiate()'
 
       # List of benchmark groups
       BENCHMARK_GROUPS=(
@@ -63,8 +63,8 @@ steps:
       done
 
       # Unit tests (on CPU) using BenchmarkTools
-      export BENCHMARK_GROUP="unit"
-      $TARTARUS_HOME/julia-$JULIA_VERSION/bin/julia --color=yes --project --check-bounds=no test/benchmark_tests.jl
+      export BENCHMARK_GROUP="model_stepping"
+      $TARTARUS_HOME/julia-$JULIA_VERSION/bin/julia --color=yes --project --check-bounds=no benchmark/benchmark_tests.jl > model_stepping.txt
 
     artifact_paths:
       - "periodic_output.txt"
@@ -72,7 +72,7 @@ steps:
       - "periodic_cheap_advection_output.txt"
       - "bounded_cheap_advection_output.txt"
       - "immersed_output.txt"
-      - "unit.txt"
+      - "model_stepping.txt"
     soft_fail:
       - exit_status: 3
 
@@ -119,4 +119,4 @@ steps:
       - "diff_periodic_cheap_advection_output.txt"
       - "diff_bounded_cheap_advection_output.txt"
       - "diff_immersed_output.txt"
-      - "diff_unit.txt"
+      - "diff_model_stepping.txt"
