--- a/.buildkite/pipeline-benchmarks.yml
+++ b/.buildkite/pipeline-benchmarks.yml
@@ -40,31 +40,31 @@ steps:
       $TARTARUS_HOME/julia-$JULIA_VERSION/bin/julia --color=yes --project=benchmark --check-bounds=no -e 'using Pkg; Pkg.add(path="./"); Pkg.instantiate()'
 
       # List of benchmark groups
-      BENCHMARK_GROUPS=(
-        "periodic"
-        "bounded"
-        "periodic_cheap_advection"
-        "bounded_cheap_advection"
-        "immersed"
-      )
+      # BENCHMARK_GROUPS=(
+      #   "periodic"
+      #   "bounded"
+      #   "periodic_cheap_advection"
+      #   "bounded_cheap_advection"
+      #   "immersed"
+      # )
 
-      # Profile each benchmark group, save output in txt and remove profiles
-      for BENCHMARK_GROUP in "\${BENCHMARK_GROUPS[@]}"; do
-        # Run benchmarks
-        export BENCHMARK_GROUP
-        OUTPUT_PREFIX="\${BENCHMARK_GROUP}_output"
+      # # Profile each benchmark group, save output in txt and remove profiles
+      # for BENCHMARK_GROUP in "\${BENCHMARK_GROUPS[@]}"; do
+      #   # Run benchmarks
+      #   export BENCHMARK_GROUP
+      #   OUTPUT_PREFIX="\${BENCHMARK_GROUP}_output"
 
-        $NSYS profile --output=\${OUTPUT_PREFIX} --trace=cuda $TARTARUS_HOME/julia-$JULIA_VERSION/bin/julia --color=yes --project=benchmark --check-bounds=no benchmark/benchmark_tests.jl
-        $NSYS stats \${OUTPUT_PREFIX}.nsys-rep > \${OUTPUT_PREFIX}.txt
+      #   $NSYS profile --output=\${OUTPUT_PREFIX} --trace=cuda $TARTARUS_HOME/julia-$JULIA_VERSION/bin/julia --color=yes --project=benchmark --check-bounds=no benchmark/benchmark_tests.jl
+      #   $NSYS stats \${OUTPUT_PREFIX}.nsys-rep > \${OUTPUT_PREFIX}.txt
 
-        # Remove generated output files
-        rm \${OUTPUT_PREFIX}.nsys-rep
-        rm \${OUTPUT_PREFIX}.sqlite
-      done
+      #   # Remove generated output files
+      #   rm \${OUTPUT_PREFIX}.nsys-rep
+      #   rm \${OUTPUT_PREFIX}.sqlite
+      # done
 
       # Unit tests (on CPU) using BenchmarkTools
       export BENCHMARK_GROUP="model_stepping"
-      $TARTARUS_HOME/julia-$JULIA_VERSION/bin/julia --color=yes --project --check-bounds=no benchmark/benchmark_tests.jl > model_stepping.txt
+      $TARTARUS_HOME/julia-$JULIA_VERSION/bin/julia --color=yes --project=benchmark --check-bounds=no benchmark/benchmark_tests.jl > model_stepping.txt
 
     artifact_paths:
       - "periodic_output.txt"
