--- a/Project.toml
+++ b/Project.toml
@@ -64,6 +64,7 @@ OceananigansReactantExt = ["Reactant", "KernelAbstractions", "ConstructionBase"]
 AMDGPU = "1.3.6, 2"
 Adapt = "4.1.1"
 CUDA = "5.7"
+CUDA_Runtime_jll = "0.19.0"
 ConstructionBase = "1"
 Crayons = "4"
 CubedSphere = "0.2, 0.3"
