--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -28,7 +28,7 @@ steps:
       tar xf $TARTARUS_HOME/julia-$JULIA_VERSION-linux-x86_64.tar.gz -C $TARTARUS_HOME
       $TARTARUS_HOME/julia-$JULIA_VERSION/bin/julia -O0 --color=yes --project -e 'using Pkg; Pkg.test()'
     agents:
-      queue: "Oceananigans"
+      queue: "Oceananigans-nautilus"
     retry:
       automatic:
         - exit_status: 1
@@ -39,7 +39,7 @@ steps:
   - label: "{{ matrix.architecture }} - {{ matrix.group }} tests"
     key: "tests"
     agents:
-      queue: "Oceananigans"
+      queue: "Oceananigans-nautilus"
     command: |
       # Add matrix-specific environment variables
       if [[ "{{ matrix.architecture }}" == "CPU" ]]; then
@@ -112,7 +112,7 @@ steps:
         'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
       $TARTARUS_HOME/julia-$JULIA_VERSION/bin/julia --color=yes --project=docs/ docs/make.jl
     agents:
-      queue: "Oceananigans"
+      queue: "Oceananigans-nautilus"
   - wait: ~
     continue_on_failure: true
 
