--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -9,7 +9,7 @@ env:
   OCEANANIGANS_DIR: "$HOME/Oceananigans.jl-$BUILDKITE_BUILD_NUMBER"
 
 agents:
-  queue: "Oceananigans-nautilus"
+  queue: "Oceananigans"
 with:
   coverage: false
 
