--- a/Project.toml
+++ b/Project.toml
@@ -74,7 +74,7 @@ GPUArrays = "10.3, 11.2.2"
 GPUArraysCore = "0.2"
 Glob = "1.3"
 InteractiveUtils = "1.9"
-JLD2 = "0.4, 0.5"
+JLD2 = "0.4, 0.5, 0.6"
 KernelAbstractions = "0.9.21"
 Krylov = "0.10.0"
 KrylovPreconditioners = "0.3.2"
