--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
           echo "[Reactant]" >> LocalPreferences.toml
           echo "xla_runtime = \"IFRT\"" >> LocalPreferences.toml
 
-          cat LocalPreferences.toml     
+          cat LocalPreferences.toml
       - uses: actions/checkout@v5
       - uses: julia-actions/setup-julia@v2
         with:
@@ -160,3 +160,28 @@ jobs:
         env:
           TEST_GROUP: "metal"
 
+
+  pythoncall:
+    name: PythonCall - Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 60
+    strategy:
+      fail-fast: false
+      matrix:
+        version:
+          - '1.10'
+        os:
+          - ubuntu-latest
+        arch:
+          - x64
+    steps:
+      - uses: actions/checkout@v5
+      - uses: julia-actions/setup-julia@v2
+        with:
+          version: ${{ matrix.version }}
+          arch: ${{ matrix.arch }}
+      - uses: julia-actions/cache@v2
+      - uses: julia-actions/julia-buildpkg@v1
+      - uses: julia-actions/julia-runtest@v1
+        env:
+          TEST_GROUP: "pythoncall"
