--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -174,6 +174,10 @@ jobs:
           - ubuntu-latest
         arch:
           - x64
+        include:
+          - os: macOS-latest
+            arch: aarch64
+            version: '1.10'
     steps:
       - uses: actions/checkout@v5
       - uses: julia-actions/setup-julia@v2
